added the latest project to the portfolio

--- a/index.html
+++ b/index.html
@@ -226,6 +226,27 @@
                     </div>
                 </div>
             </div>
+            <div class='row' id="prorow">
+                <div class='col-lg-6 col-md-6'>
+                    <div class='single-portfolio' style='background-image: url(assets/images/portfolio/lirinode.png); background-size: cover; background-repeat: no-repeat;'>
+                        <div class='portfolio-hover'>
+                            <div class="row" id="namelinks">
+                                <div class='col-8 col-md-9'>
+                                    <h4>
+                                        <span>Liri Node</span>
+                                    </h4>
+                                </div>
+                                <div class="col-4 col-md-3 col-sm-2">
+                                    <div class="portfolio-btn">
+                                        <a href="https://github.com/rudenik/liri-node-app/">
+                                            <i class="fab fa-github-alt"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </section>
     <footer class='footer'>
