added the bamazon suite to the portofolio.

--- a/index.html
+++ b/index.html
@@ -247,6 +247,26 @@
                         </div>
                     </div>
                 </div>
+                <div class='col-lg-6 col-md-6'>
+                    <div class='single-portfolio' style='background-image: url(assets/images/portfolio/bamazonManager1.jpg); background-size: cover; background-repeat: no-repeat;'>
+                        <div class='portfolio-hover'>
+                            <div class="row" id="namelinks">
+                                <div class='col-8 col-md-9'>
+                                    <h4>
+                                        <span>Bamazon Suite</span>
+                                    </h4>
+                                </div>
+                                <div class="col-4 col-md-3 col-sm-2">
+                                    <div class="portfolio-btn">
+                                        <a href="https://github.com/rudenik/bamazon/">
+                                            <i class="fab fa-github-alt"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
         </div>
     </section>
     <footer class='footer'>
