--- a/index.html
+++ b/index.html
@@ -268,6 +268,32 @@
                     </div>
                 </div>
         </div>
+        <div class='row' id="prorow">
+            <div class='col-lg-6 col-md-6'>
+                <div class='single-portfolio' style='background-image: url(assets/images/portfolio/fiendfinder.jpg); background-size: cover; background-repeat: no-repeat;'>
+                    <div class='portfolio-hover'>
+                        <div class="row" id="namelinks">
+                            <div class='col-8 col-md-9'>
+                                <h4>
+                                    <span>Friend Finder</span>
+                                </h4>
+                            </div>
+                            <div class="col-4 col-md-3 col-sm-2">
+                                <div class="portfolio-btn">
+                                    <a href="https://immense-retreat-57518.herokuapp.com/">
+                                        <i class="fa fa-link"></i>
+                                    </a>
+                                    <a href="https://github.com/rudenik/FriendFinder">
+                                        <i class="fab fa-github-alt"></i>
+                                    </a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            </div>
+
     </section>
     <footer class='footer'>
         <div class='container'>
