added latest assignment

--- a/index.html
+++ b/index.html
@@ -58,18 +58,18 @@
                     <span class="typed"></span>
                     <span class="typed-cursor"></span>
                 </p>
-                <a href="mailto:simon.cain@mail.utoronto.ca?subject=What's up with Simon Cain" class="button">Contact Me</a>
+                <a href="mailto:thesimoncain@gmail.com?subject=What's up with Simon Cain" class="button">Contact Me</a>
                 <div class="social-links">
                     <i class='fab fa-linkedin'></i>
-                    <a href="https://www.linkedin.com/in/simon-cain-9159341a/">LinkedIn</a>
+                    <a href="https://www.linkedin.com/in/thesimoncain/">LinkedIn</a>
                     <i class='fab fa-twitter'></i>
-                    <a href="https://twitter.com/rudenik">Twitter</a>
+                    <a href="https://twitter.com/thelargechild">Twitter</a>
                     <i class='fab fa-facebook-f'></i>
                     <a href="https://www.facebook.com/">Facebook</a>
                     <i class='fab fa-instagram'></i>
-                    <a href="https://www.instagram.com/rudenik/">Instagram</a>
+                    <a href="https://www.instagram.com/thesimoncain/">Instagram</a>
                     <i class="far fa-envelope"></i>
-                    <a href="mailto:simon.cain@mail.utoronto.ca?subject=What's up with Simon Cain">Email</a>
+                    <a href="mailto:thesimoncain@gmail.com??subject=What's up with Simon Cain">Email</a>
                 </div>
             </div>
         </div>
@@ -100,6 +100,9 @@
                                 <h3 class="text-uppercase"></h3>
                                 <ul>
                                     <li>JavaScript</li>
+                                    <li>Express</li>
+                                    <li>JQuery</li>
+                                    <li>Node</li>
                                     <li>Swift</li>
                                     <li>Computer Repair</li>
                                     <li>Solutions Provider</li>
@@ -316,11 +319,35 @@
                 </div>
             </div>
             </div>
+            <div class='row' id="prorow">
+                <div class='col-lg-6 col-md-6'>
+                    <div class='single-portfolio' style='background-image: url(assets/images/portfolio/Scraptastic.jpg); background-size: cover; background-repeat: no-repeat;'>
+                        <div class='portfolio-hover'>
+                            <div class="row" id="namelinks">
+                                <div class='col-8 col-md-9'>
+                                    <h4>
+                                        <span>Gizmodo Scraper</span>
+                                    </h4>
+                                </div>
+                                <div class="col-4 col-md-3 col-sm-2">
+                                    <div class="portfolio-btn">
+                                        <a href="https://sleepy-basin-32085.herokuapp.com/">
+                                            <i class="fa fa-link"></i>
+                                        </a>
+                                        <a href="https://github.com/rudenik/Mongodio">
+                                            <i class="fab fa-github-alt"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
 
     </section>
     <footer class='footer'>
         <div class='container'>
-            <span class='text-muted'>© 2018 SimonCain.</span>
+            <span class='text-muted'>© 2018 TheSimonCain.</span>
         </div>
     </footer>
 </body>
