added the clicky game.

--- a/index.html
+++ b/index.html
@@ -343,6 +343,30 @@
                         </div>
                     </div>
                 </div>
+                <div class='col-lg-6 col-md-6'>
+                    <div class='single-portfolio' style='background-image: url(assets/images/portfolio/clicky.jpg)'>
+                        <div class='portfolio-hover'>
+                            <div class="row" id="namelinks">
+                                <div class='col-8 col-md-3 col-md-9'>
+                                    <h4>
+                                        <span id="mgg">Clicky Clack</span>
+                                    </h4>
+                                </div>
+                                <div class="col-4 col-md-3 col-sm-2">
+                                    <div class="portfolio-btn">
+                                        <a href="https://rudenik.github.io/clicky">
+                                            <i class="fa fa-link"></i>
+                                        </a>
+                                        <a href="https://github.com/rudenik/clicky">
+                                            <i class="fab fa-github-alt"></i>
+                                        </a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                </div>
 
     </section>
     <footer class='footer'>
